chore: removes json rules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "noImplicitAny": false,
         "declaration": false,
         "outDir": "dist",
-        "sourceMap": true,
+        "sourceMap": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "**/*.spec.ts",  "**/*.d.ts"]
